melee weapon concept
Former-commit-id: 0e42bd0296bde4f0598747e3380dcf1862e522d7

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -163,15 +163,16 @@ editbind F7			[ showgui findent ]
 editbindvar F8		entselsnap
 editbind F9			[ changeoutline 1 ]
 
-bind 1				[ weapon 0 ] // pistol
-bind 2				[ weapon 1 ] // shotgun
-bind 3				[ weapon 2 ] // smg
-bind 4				[ weapon 3 ] // flamer
-bind 5				[ weapon 4 ] // plasma
-bind 6				[ weapon 5 ] // rifle
-bind 7				[ weapon 6 ] // grenade
-bind 8				[ weapon 7 ] // insta
-bindvar 9			thirdperson
+bind 1				[ weapon 0 ] // melee
+bind 2				[ weapon 1 ] // pistol
+bind 3				[ weapon 2 ] // shotgun
+bind 4				[ weapon 3 ] // smg
+bind 5				[ weapon 4 ] // flamer
+bind 6				[ weapon 5 ] // plasma
+bind 7				[ weapon 6 ] // rifle
+bind 8				[ weapon 7 ] // grenade
+bind 9				[ weapon 8 ] // insta
+bindvar 0			thirdperson
 
 editbind 1 			[ domodifier 11 ]
 editbind 2 			[ domodifier 12 ]
