--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -191,7 +191,7 @@ newgui name [
 	]
 ]
 
-wepnames = [ "  pistol" " shotgun" "     smg" "  flamer" "  plasma" "   rifle" " grenade" "   insta"] //make them all the same size
+weapname = [ "melee" "pistol" "shotgun" "smg" "flamer" "plasma" "rifle" "grenade" "rifle" "action" ] // make them all the same size
 
 newgui arena [
 	guilist [
@@ -202,12 +202,12 @@ newgui arena [
 			guistrut 1
 			if (& (mutators) 0x0020) [
 				guititle "select weapon"
-				guibutton "^fwrandom" [arenaweap 0] "action"
-				guibutton "^fyshotgun" [arenaweap 1] "shotgun"
-				guibutton "^fosmg" [arenaweap 2] "smg"
-				guibutton "^frflamer" [arenaweap 3] "flamer"
-				guibutton "^fcplasma" [arenaweap 4] "plasma"
-				guibutton "^fvrifle" [arenaweap 5] "rifle"
+				guibutton "^fwrandom" [arenaweap 1] "action"
+				guibutton "^fyshotgun" [arenaweap 2] "shotgun"
+				guibutton "^fosmg" [arenaweap 3] "smg"
+				guibutton "^frflamer" [arenaweap 4] "flamer"
+				guibutton "^fcplasma" [arenaweap 5] "plasma"
+				guibutton "^fvrifle" [arenaweap 6] "rifle"
 			] [
 				guitext "^frsorry, this is only available in arena"
 				guibutton "^fgok" [cleargui 1] "action"
@@ -416,7 +416,8 @@ newgui game [
 					vardef stfpoints			"stf points"
 					vardef stfoccupy			"stf occupy"
 					vardef spawnweapon			"spawn weapon"
-					vardef instaspawnweapon		"insta spawn weapon"
+					vardef instaweapon			"instagib weapon"
+					vardef trialweapon			"time-trial weapon"
 					vardef spawngrenades		"spawn grenades"
 				]
 				guistrut 1
@@ -448,12 +449,19 @@ newgui game [
 					varfld stfpoints 16
 					varfld stfoccupy 16
 					guilist [
-						guilist [ varfld spawnweapon 11 ]
-						guitext (format "^fa%1" (at $wepnames $spawnweapon))
+						guilist [ varfld spawnweapon 14 ]
+						guistrut 1
+						guistayopen [ guiimage (format "textures/%1" (at $weapname $spawnweapon)) [] 0.5 0 "textures/nothumb" ]
 					]
 					guilist [
-						guilist [ varfld instaspawnweapon 11 ]
-						guitext (format "^fa%2" (at $wepnames $instaspawnweapon))
+						guilist [ varfld instaweapon 14 ]
+						guistrut 1
+						guistayopen [ guiimage (format "textures/%1" (at $weapname $instaweapon)) [] 0.5 0 "textures/nothumb" ]
+					]
+					guilist [
+						guilist [ varfld trialweapon 14 ]
+						guistrut 1
+						guistayopen [ guiimage (format "textures/%1" (at $weapname $trialweapon)) [] 0.5 0 "textures/nothumb" ]
 					]
 					varfld spawngrenades 16
 				]
@@ -485,10 +493,10 @@ newgui game [
 					vardef itemspawnstyle		"item spawn style"
 					vardef regendelay			"regen delay"
 					vardef regentime			"regen time"
-					vardef spawnprotecttime		"spawn protect"
+					vardef spawnprotect			"spawn protect"
 					vardef spawndelay			"spawn delay"
-					vardef instaspawndelay		"insta spawn delay"
-					vardef trialspawndelay		"time-trial spawn delay"
+					vardef instadelay			"insta spawn delay"
+					vardef trialdelay			"time-trial spawn delay"
 				]
 				guistrut 1
 				guilist [
@@ -514,10 +522,10 @@ newgui game [
 					varfld itemspawnstyle 16
 					varfld regendelay 16
 					varfld regentime 16
-					varfld spawnprotecttime 16
+					varfld spawnprotect 16
 					varfld spawndelay 16
-					varfld instaspawndelay 16
-					varfld trialspawndelay 16
+					varfld instadelay 16
+					varfld trialdelay 16
 				]
 			]
 			guistayopen [ guibutton "^foreset all game variables" [resetvars] "exit" ]
@@ -1248,14 +1256,14 @@ newgui options [
 bindactions = [
 	forward backward left right "universaldelta 1" "universaldelta -1" "spectator 1" "spectator 0"
 	"action 0" "action 1" "action 2" "action 3" "action 4" "action 5" "action 6" "action 7"
-	drop "weapon 0" "weapon 1" "weapon 2" "weapon 3" "weapon 4" "weapon 5" "weapon 6"
+	drop "weapon 0" "weapon 1" "weapon 2" "weapon 3" "weapon 4" "weapon 5" "weapon 6" "weapon 7"
 	"saycommand /" saytextcommand sayteamcommand toggleconsole toggleedit grabinput
 	addbot delbot "showgui game" "showgui vote" "setmaster 1" "showgui arena"
 ]
 bindnames = [
 	forward backward left right "scroll up" "scroll down" "enter spectator" "exit spectator"
 	"attack" "alt-attack" "reload" "use" "jump" "sprint" "crouch" "impulse"
-	"drop weapon" pistol shotgun smg flamer plasma grenade insta
+	"drop weapon" melee pistol shotgun smg flamer plasma grenade insta
 	"cmd input" "all chat" "team chat" "toggle editing" "toggle console" "toggle input"
 	"add bot" "delete bot" "game menu" "vote menu" "claim master" "arena menu"
 ]
