--- a/data/models/actors/player/alpha/vwep/md5.cfg
+++ b/data/models/actors/player/alpha/vwep/md5.cfg
@@ -10,9 +10,11 @@ md5pitch "" 1
 md5anim "idle" "../../vwep_p_idle.md5anim" 1
 md5anim "pain" "../../vwep_p_idle.md5anim" 1
 md5anim "switch" "../../vwep_p_switch.md5anim" 30
-md5anim "plasma" "../../vwep_p_idle.md5anim" 1
-md5anim "plasma shoot" "../../vwep_p_shoot.md5anim" 50
-md5anim "plasma reload" "../../vwep_p_reload.md5anim" 12
+md5anim "melee" "../../vwep_gr_idle.md5anim" 1
+md5anim "melee attack" "../../vwep_gr_throw.md5anim" 50
+md5anim "pistol" "../../vwep_p_idle.md5anim" 1
+md5anim "pistol shoot" "../../vwep_p_shoot.md5anim" 50
+md5anim "pistol reload" "../../vwep_p_reload.md5anim" 20
 md5anim "shotgun" "../../vwep_sg_idle.md5anim" 1
 md5anim "shotgun shoot" "../../vwep_sg_shoot.md5anim" 15
 md5anim "shotgun reload" "../../vwep_sg_reload.md5anim" 21
@@ -22,9 +24,9 @@ md5anim "smg reload" "../../vwep_p_reload.md5anim" 20
 md5anim "flamer" "../../vwep_sg_idle.md5anim" 1
 md5anim "flamer shoot" "../../vwep_sg_shoot.md5anim" 30
 md5anim "flamer reload" "../../vwep_fl_reload.md5anim" 15.5
-md5anim "pistol" "../../vwep_p_idle.md5anim" 1
-md5anim "pistol shoot" "../../vwep_p_shoot.md5anim" 50
-md5anim "pistol reload" "../../vwep_p_reload.md5anim" 20
+md5anim "plasma" "../../vwep_p_idle.md5anim" 1
+md5anim "plasma shoot" "../../vwep_p_shoot.md5anim" 50
+md5anim "plasma reload" "../../vwep_p_reload.md5anim" 12
 md5anim "rifle" "../../vwep_sg_idle.md5anim" 1
 md5anim "rifle shoot" "../../vwep_sg_shoot.md5anim" 20
 md5anim "rifle reload" "../../vwep_sg_reload.md5anim" 12
