--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -20,6 +20,8 @@ registersound	"sounds/sfx/bzap"				48	"air"	100		//	S_BZAP
 registersound	"sounds/sfx/bzzt"				64	"air"	100		//	S_BZZT
 registersound	"sounds/sfx/reload"				192	"air"	200		//	S_RELOAD
 registersound	"sounds/sfx/switch"				156	"air"	200		//	S_SWITCH
+registersound	"sounds/sfx/grenade"			96	"air"	100		//	S_MELEE
+registersound	"sounds/sfx/grenade"			96	"air"	100		//	S_MELEE2
 registersound	"sounds/sfx/pistol"				128	"air"	200		//	S_PISTOL
 registersound	"sounds/sfx/pistol"				156	"air"	200		//	S_PISTOL2
 registersound	"sounds/sfx/shotgun"			192 "air"	500		//	S_SHOTGUN
