--- a/data/models/actors/player/gamma/md5.cfg
+++ b/data/models/actors/player/gamma/md5.cfg
@@ -16,11 +16,12 @@ md5anim "idle" "../idle.md5anim" 1
 md5anim "dying" "../dying.md5anim" 8
 md5anim "dead" "../dead.md5anim" 8
 md5anim "idle" "../idle.md5anim" 1
-md5anim "plasma" "../idle.md5anim" 1
+md5anim "melee" "../idle.md5anim" 1
+md5anim "pistol" "../idle.md5anim" 1
 md5anim "shotgun" "../idle.md5anim" 1
 md5anim "smg" "../idle.md5anim" 1
 md5anim "flamer" "../idle.md5anim" 1
-md5anim "pistol" "../idle.md5anim" 1
+md5anim "plasma" "../idle.md5anim" 1
 md5anim "rifle" "../idle.md5anim" 1
 md5anim "grenade" "../idle.md5anim" 1
 md5anim "forward" "../forward.md5anim" 8
@@ -50,9 +51,11 @@ md5anim "dying" "../dying.md5anim" 8
 md5anim "dead" "../dead.md5anim" 8
 md5anim "pain" "../t_pain.md5anim" 25
 md5anim "switch" "../g_reload.md5anim" 8
-md5anim "plasma" "../g_idle.md5anim" 1
-md5anim "plasma shoot" "../g_shoot.md5anim" 25
-md5anim "plasma reload" "../g_reload.md5anim" 9
+md5anim "melee" "../frag_idle.md5anim" 1
+md5anim "melee attack" "../frag_throw.md5anim" 50
+md5anim "pistol" "../g_idle.md5anim" 1
+md5anim "pistol shoot" "../g_shoot.md5anim" 25
+md5anim "pistol reload" "../g_reload.md5anim" 8
 md5anim "shotgun" "../g_idle.md5anim" 1
 md5anim "shotgun shoot" "../g_shoot.md5anim" 25
 md5anim "shotgun reload" "../g_reload.md5anim" 9
@@ -62,9 +65,9 @@ md5anim "smg reload" "../g_reload.md5anim" 6
 md5anim "flamer" "../g_idle.md5anim" 1
 md5anim "flamer shoot" "../g_shoot.md5anim" 25
 md5anim "flamer reload" "../g_reload.md5anim" 4
-md5anim "pistol" "../g_idle.md5anim" 1
-md5anim "pistol shoot" "../g_shoot.md5anim" 25
-md5anim "pistol reload" "../g_reload.md5anim" 8
+md5anim "plasma" "../g_idle.md5anim" 1
+md5anim "plasma shoot" "../g_shoot.md5anim" 25
+md5anim "plasma reload" "../g_reload.md5anim" 9
 md5anim "rifle" "../g_idle.md5anim" 1
 md5anim "rifle shoot" "../g_shoot.md5anim" 25
 md5anim "rifle reload" "../g_reload.md5anim" 4
