--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -390,6 +390,7 @@ newgui game [
 			guilist [
 				guilist [
 					vardef selfdamage			"self damage"
+					vardef trialdamage			"time-trial damage"
 					vardef teamdamage			"team damage"
 					vardef maxhealth			"max health"
 					vardef extrahealth			"extra health"
@@ -403,8 +404,6 @@ newgui game [
 					vardef impulsecost			"impulse cost"
 					vardef impulsecount			"impulse count"
 					vardef impulseskate			"impulse skate"
-					vardef itemsallowed			"items allowed"
-					vardef itemdropping			"item dropping"
 					vardef kamikaze				"kamikaze"
 					vardef fraglimit			"frag limit"
 					vardef ctflimit				"ctf score limit"
@@ -423,6 +422,7 @@ newgui game [
 				guistrut 1
 				guilist [
 					varfld selfdamage 16
+					varfld trialdamage 16
 					varfld teamdamage 16
 					varfld maxhealth 16
 					varfld extrahealth 16
@@ -436,8 +436,6 @@ newgui game [
 					varfld impulsecost 16
 					varfld impulsecount 16
 					varfld impulseskate 16
-					varfld itemsallowed 16
-					varfld itemdropping 16
 					varfld kamikaze 16
 					varfld fraglimit 16
 					varfld ctflimit 16
@@ -471,6 +469,8 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
+					vardef itemsallowed			"items allowed"
+					vardef itemdropping			"item dropping"
 					vardef maprotate			"map rotation"
 					vardef spawnrotate			"spawn rotation"
 					vardef forcegravity			"force gravity"
@@ -500,6 +500,8 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
+					varfld itemsallowed 16
+					varfld itemdropping 16
 					varfld maprotate 16
 					varfld spawnrotate 16
 					varfld forcegravity 16
