fix itemspawn distortion, text colouring improvements, reset winner at end of duel round by default
Former-commit-id: 3030de42a12b0b3b0e62ba0ed935e4545a25175a

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -414,6 +414,8 @@ newgui game [
 					vardef stffinish			"stf all finish"
 					vardef stfpoints			"stf points"
 					vardef stfoccupy			"stf occupy"
+					vardef itemsallowed			"items allowed"
+					vardef itemdropping			"item dropping"
 					vardef spawnweapon			"spawn weapon"
 					vardef instaweapon			"instagib weapon"
 					vardef trialweapon			"time-trial weapon"
@@ -446,6 +448,8 @@ newgui game [
 					varfld stffinish 16
 					varfld stfpoints 16
 					varfld stfoccupy 16
+					varfld itemsallowed 16
+					varfld itemdropping 16
 					guilist [
 						guilist [ varfld spawnweapon 14 ]
 						guistrut 1
@@ -469,8 +473,6 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
-					vardef itemsallowed			"items allowed"
-					vardef itemdropping			"item dropping"
 					vardef maprotate			"map rotation"
 					vardef spawnrotate			"spawn rotation"
 					vardef forcegravity			"force gravity"
@@ -486,8 +488,11 @@ newgui game [
 					vardef wavepushscale		"wave push scale"
 					vardef timelimit			"time limit"
 					vardef triallimit			"time-trial limit"
-					vardef intermlimit			"intermission"
-					vardef votelimit			"vote limit"
+					vardef intermlimit			"intermission limit"
+					vardef votelimit			"vote wait limit"
+					vardef duelreset			"duel resets players"
+					vardef duelclear			"duel clears items"
+					vardef duellimit			"duel wait limit"
 					vardef itemspawntime		"item spawn time"
 					vardef itemspawndelay		"item spawn delay"
 					vardef itemspawnstyle		"item spawn style"
@@ -500,8 +505,6 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
-					varfld itemsallowed 16
-					varfld itemdropping 16
 					varfld maprotate 16
 					varfld spawnrotate 16
 					varfld forcegravity 16
@@ -519,6 +522,9 @@ newgui game [
 					varfld triallimit 16
 					varfld intermlimit 16
 					varfld votelimit 16
+					varfld duelreset 16
+					varfld duelclear 16
+					varfld duellimit 16
 					varfld itemspawntime 16
 					varfld itemspawndelay 16
 					varfld itemspawnstyle 16
