UI layout and visual fixes
Former-commit-id: 1f3636dd28782887065debaf222fd80717b34682

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -237,7 +237,7 @@ displayvote = [
 newgui vote [ displayvote ]
 
 maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps trialmaps trialmaps ]
-maplistsize = 24 //adjust if desired
+maplistsize = 29 //adjust if desired
 mapindex = 0
 maplist = ""
 mappath = ""
@@ -288,8 +288,8 @@ newgui game [
 	if (strcmp (at $maplist $mapnum) "?") [ mapcur = $mapextra; mapimg = $mapextra ] [ mapcur = (at $maplist $mapnum); mapimg = (at $mappath $mapnum) ]
 	guilist [
 		guilist [
-			guifont "default" [ guitext (gamename $modeselected $mutsselected) ]
-			guilist [ guitext "^faselected on "; guifont "default" [ guitext $mapcur ] ]
+			guifont "emphasis" [ guitext (gamename $modeselected $mutsselected) ]
+			guilist [ guifont "sub" [ guitext "^faselected on " ]; guifont "emphasis" [ guitext $mapcur ] ]
 			guistrut 1
 			guilist [
 				guilist [
@@ -320,7 +320,7 @@ newgui game [
 				guistrut 2
 				guilist [ guiimage $mapimg [@(format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur)] 8 1 "textures/nothumb" ]
 			]
-			guistrut 1
+			guistrut 2
 			guilist [
 				guilist [
 					vardef botbalance		"bot balance"
@@ -339,6 +339,15 @@ newgui game [
 					guibutton "^fmdel bot" [delbot] "player"
 				]
 			]
+			if (> $hasoctapaks 0) [
+				guistrut 4
+				guilist [ guistayopen [
+					guibutton "^fvshow maps from sauerbraten" [
+						if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
+						showngamegui = 0
+					] (? (> $mapocta 0) "checkboxon" "checkbox")
+				] ]
+			]
 		]
 		guistrut 2
 		guilist [
@@ -346,13 +355,11 @@ newgui game [
 				guistrut 7
 				guiimage "textures/conopen" [@(format "start %1 %2 %3" $mapcur $modeselected $mutsselected)] 1
 				guistrut 1
-				guifont "super" [
-					guibutton "^fgvote" (format "start %1 %2 %3" $mapcur $modeselected $mutsselected)
-				]
-			] 
+				guifont "super" [ guibutton "^fgvote" (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) ]
+			]
 			guilist [
 				mapscount = $maplistsize
-				if (> $hasoctapaks 0) [ mapscount = (- $mapscount 2) ]
+				//if (> $hasoctapaks 0) [ mapscount = (- $mapscount 2) ]
 				nummaps = (listlen $maplist)
 				mapindex = (min (max 0 (- $nummaps $mapscount)) $mapindex) //safeguard
 				mapnum = (min $mapnum $nummaps)
@@ -372,15 +379,6 @@ newgui game [
 					]
 				]
 				if (< $mapscount $nummaps) [ guislider mapindex 0 (- $nummaps $mapscount) [] 1 ]
-			]
-			if (> $hasoctapaks 0) [
-				guistrut 1
-				guilist [ guistayopen [
-					guibutton "^fvshow maps from sauerbraten" [
-						if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
-						showngamegui = 0
-					] (? (> $mapocta 0) "checkboxon" "checkbox")
-				] ]
 			]
 		]
 	]
@@ -536,6 +534,7 @@ newgui game [
 					varfld trialdelay 16
 				]
 			]
+			guistrut 1
 			guistayopen [ guibutton "^foreset all game variables" [resetvars] "exit" ]
 		]
 	]
