--- a/data/trak/trak7/package.cfg
+++ b/data/trak/trak7/package.cfg
@@ -1,42 +1,42 @@
 setshader bumpspecmapparallaxworld
 
-texture c "trak7/pipe1.jpg" 0 0 0 0.5
-texture s "trak7/pipe1_gloss.jpg"
-texture n "trak7/pipe1_nm.png"
+texture c "trak/trak7/pipe1.jpg" 0 0 0 0.5
+texture s "trak/trak7/pipe1_gloss.jpg"
+texture n "trak/trak7/pipe1_nm.png"
 
 setshader bumpspecmapparallaxworld
 
-texture c "trak7/tile1.jpg" 0 0 0 0.5
-texture s "trak7/tile1_gloss.jpg"
-texture n "trak7/tile1_nm.png"
+texture c "trak/trak7/tile1.jpg" 0 0 0 0.5
+texture s "trak/trak7/tile1_gloss.jpg"
+texture n "trak/trak7/tile1_nm.png"
 
 setshader bumpspecmapparallaxworld
 
-texture c "trak7/tile1a.jpg" 0 0 0 0.5
-texture s "trak7/tile1_gloss.jpg"
-texture n "trak7/tile1_nm.png"
+texture c "trak/trak7/tile1a.jpg" 0 0 0 0.5
+texture s "trak/trak7/tile1_gloss.jpg"
+texture n "trak/trak7/tile1_nm.png"
 
 setshader bumpspecmapparallaxworld
 
-texture c "trak7/vent1.jpg" 0 0 0 0.5
-texture s "trak7/vent1_gloss.jpg"
-texture n "trak7/vent1_nm.png"
+texture c "trak/trak7/vent1.jpg" 0 0 0 0.5
+texture s "trak/trak7/vent1_gloss.jpg"
+texture n "trak/trak7/vent1_nm.png"
 
 setshader bumpspecmapparallaxworld
 
-texture c "trak7/vpanel1.jpg" 0 0 0 0.5
-texture s "trak7/vpanel1_gloss.jpg
-texture n "trak7/vpanel1_nm.png"
+texture c "trak/trak7/vpanel1.jpg" 0 0 0 0.5
+texture s "trak/trak7/vpanel1_gloss.jpg
+texture n "trak/trak7/vpanel1_nm.png"
 
 setshader bumpspecmapparallaxworld
 
-texture c "trak7/wall1.jpg" 0 0 0 0.5
-texture s "trak7/wall1_gloss.jpg"
-texture n "trak7/wall1_nm.png"
+texture c "trak/trak7/wall1.jpg" 0 0 0 0.5
+texture s "trak/trak7/wall1_gloss.jpg"
+texture n "trak/trak7/wall1_nm.png"
 
 setshader bumpspecmapparallaxworld
 
-texture c "trak7/wall1b.jpg" 0 0 0 0.5
-texture s "trak7/wall1_gloss.jpg"
-texture n "trak7/wall1_nm.png"
+texture c "trak/trak7/wall1b.jpg" 0 0 0 0.5
+texture s "trak/trak7/wall1_gloss.jpg"
+texture n "trak/trak7/wall1_nm.png"
 
