--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -200,20 +200,28 @@ newgui arena [
 		guilist [
 			textlogo
 			guistrut 1
-			if (& (mutators) 0x0020) [
-				guititle "select weapon"
+			if (&& (> (mutators) 0) (& (mutators) 0x0020)) [
+				guititle "arena weapon"
+				guistrut 1
 				guibutton "^fwrandom" [arenaweap 1] "action"
 				guibutton "^fyshotgun" [arenaweap 2] "shotgun"
 				guibutton "^fosmg" [arenaweap 3] "smg"
 				guibutton "^frflamer" [arenaweap 4] "flamer"
 				guibutton "^fcplasma" [arenaweap 5] "plasma"
 				guibutton "^fvrifle" [arenaweap 6] "rifle"
+				guistrut 1
+				guibutton "^fgcancel" [cleargui 1] "action"
 			] [
-				guitext "^frsorry, this is only available in arena"
+				guititle "sorry"
+				guistrut 1
+				guilist [ guistrut 1; guitext "^frthis is only available in arena" ]
+				guistrut 1
 				guibutton "^fgok" [cleargui 1] "action"
 			]
 		]
 	]
+	guistrut 1
+	guilist [ guifont "sub" [ guitext (format "Press ^fs^fc%1^fS to open this menu at any time" (searchbinds "showgui arena" 5 "or")) ] ]
 ]
 
 displayvote = [
