unobfuscate newgui entfind (allow an insel filter too)
Former-commit-id: d7f591c5e03a95070b6713246d52f7c470e98af0

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -359,7 +359,7 @@ newgui game [
 		]
 		guistrut 2
 		guilist [
-			guilist [ 
+			guilist [
 				guistrut 7
 				guiimage "textures/conopen" [@(format "start %1 %2 %3" $mapcur $modeselected $mutsselected)] 1
 				guistrut 1
@@ -646,52 +646,77 @@ newgui scratchpad [
 
 scratchpad = [showgui scratchpad]
 
+doinsel = 0
+
+findents = [
+	match = 1
+	if $doinsel [
+		if (= $doinsel 1) [
+			match = (* $match (insel))
+		] [
+			match = (* $match (! (insel)))
+		]
+	]
+	if $dosearch0 [
+		match = (* $match (strcmp (et) (at $enttypelist $entt)))
+	]
+	loop i 5 [
+		if [$dosearch@(+ $i 1)] [
+			match = (* $match (= (ea $i) [enta@(+ $i 1)]))
+		]
+	]
+
+	result $match
+]
+
 entt = 0
-enta0 = 0
 enta1 = 0
 enta2 = 0
 enta3 = 0
 enta4 = 0
+enta5 = 0
+
 dosearch0 = 1
 dosearch1 = 1
 dosearch2 = 1
 dosearch3 = 1
 dosearch4 = 1
 dosearch5 = 1
-tmp = ""
 
-newgui findent [
-	guitext "Select which items to search for"
-	guilist [
-		guicheckbox "Type" dosearch0
-		guibar
-		guicheckbox "ATR. 1" dosearch1
-		guibar
-		guicheckbox "ATR. 2" dosearch2
-		guibar
-		guicheckbox "ATR. 3" dosearch3
-		guibar
-		guicheckbox "ATR. 4" dosearch4
-		guibar
-		guicheckbox "ATR. 5" dosearch5
-	]
-	guibar
-	guistayopen [ guibutton "Copy Attributes from currently selected entity" [loop i 5 [(concatword "enta" $i) = (ea $i)]; loop i (listlen $enttypelist) [if (strcmp (et) (at $enttypelist $i)) [entt = $i; i = 19]] ] ]
-	guilist [
-		loop i 5 [
-			guilist [
-				guitext (format "ATR. %1" (+ $i 1))
-				guifield (concatword "enta" $i) 6 [(concatword "enta" $i) = (min 32767 (max -32767 (getalias (concatword "enta" $i))))]
-			]
-			if (> 4 $i) [guibar]
+newgui entfind [
+	guitext "Set the attributes below to search for"
+	guistrut 1
+	guicheckbox "Type (see next tab)" dosearch0
+	loop i 5 [
+		guilist [
+			guicheckbox [attr @(+ $i 1)] [dosearch@(+ $i 1)]
+			guistrut 1
+			guifield [enta@(+ $i 1)] 6 [clamp [enta@(+ $i 1)] -32767 32767]
 		]
 	]
+
+	guilist [
+		guiradio "off" doinsel 0
+		guistrut 1
+		guiradio "inside selection" doinsel 1
+		guistrut 1
+		guiradio "outside selection" doinsel 2
+	]
+
 	guibar
-	guitext "* means wildcard (anything)"
-	tmp = (concat (if $dosearch0 [at $enttypelist $entt] [result "*"]) (if $dosearch1 $enta0 [result "*"]) (if $dosearch2 $enta1 [result "*"]) (if $dosearch3 $enta2 [result "*"]) (if $dosearch4 $enta3 [result "*"]) (if $dosearch5 $enta4 [result "*"]))
 	guistayopen [
-		guibutton (format "Search for: %1" $tmp) (format "entfind %1" $tmp)
-		guibutton (format "Print /entfind %1 to console" $tmp) (format "saycommand /entfind %1" $tmp)
+		guibutton "Copy Attributes from currently selected entity" [
+			loop i 5 [
+				[enta@(+ $i 1)] = (ea $i)
+			]
+			loop i (listlen $enttypelist)
+			[
+				if (strcmp (et) (at $enttypelist $i)) [
+					entt = $i
+				]
+			]
+		]
+		guibutton "select all valid entities" [entselect [(findents)]]
 	]
 
 	guitab Type
@@ -705,7 +730,6 @@ newgui findent [
 		]
 	]
 ]
-
 
 newmapsize = 12
 savemap_name = temp
@@ -1134,7 +1158,7 @@ newgui options [
       guiradio "more verbose" showfps 3
     ]
     ]
-	
+
     guitab   "res"
     guistayopen [
       guilist [
@@ -1194,7 +1218,7 @@ newgui options [
             guitext "5:3"
             @(resbutton 800 480)
             @(resbutton 1280 768)
-            
+
             guibar
             guitext "Custom"
             guilist [
