replace all floor glass in nova
Former-commit-id: 4d946bc0f7094ee580370fdcfa9cddcc4be773d3

--- a/data/maps/nova.cfg
+++ b/data/maps/nova.cfg
@@ -10,9 +10,9 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudblend 1.0
-// cloudbox ""
-// cloudclip 0.5
+// cloudblend 0.75
+// cloudbox "penguins/kenon"
+// cloudclip 0.0
 // cloudcolour 0xFFFFFF
 // cloudfade 0.2
 // cloudglare 0
@@ -68,23 +68,23 @@
 // shadowmapangle 0
 // skybgcolour 0x000000
 // skybgglare 1
-// skyblend 1.0
-// skybox "acord/overmars"
-// skycolour 0xFFFFFF
+// skyblend 0.75
+// skybox "skyboxes/stars"
+// skycolour 0x888888
 // skyglare 1
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
 // spincloudlayer 0.0
-// spinclouds 0.0
-// spinsky 0.0
+// spinclouds 0.2
+// spinsky -0.05
 // stairheight 4.1
 // stepspeed 1.0
-// vertwater 1
+// vertwater 0
 // wallz 0.2
-// watercolour 0x103060
-// waterfallcolour 0x000000
-// waterfog 150
+// watercolour 0x101030
+// waterfallcolour 0x102030
+// waterfog 8
 // waterlod 1
 // waterspec 150
 // watersubdiv 3
