fixes for the entfind menu
Former-commit-id: f732b77f303efaaff6fe30f472c3b4a3de8dc398

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -661,8 +661,8 @@ findents = [
 		match = (* $match (strcmp (et) (at $enttypelist $entt)))
 	]
 	loop i 5 [
-		if [$dosearch@(+ $i 1)] [
-			match = (* $match (= (ea $i) [enta@(+ $i 1)]))
+		if (getalias (concatword "dosearch" (+ $i 1))) [
+			match = (* $match (= (ea (+ $i 1)) (getalias (concatword "enta" (+ $i 1)))))
 		]
 	]
 
@@ -691,7 +691,7 @@ newgui entfind [
 		guilist [
 			guicheckbox [attr @(+ $i 1)] [dosearch@(+ $i 1)]
 			guistrut 1
-			guifield [enta@(+ $i 1)] 6 [clamp [enta@(+ $i 1)] -32767 32767]
+			guifield [enta@(+ $i 1)] 11 [ enta@(+ $i 1) = (min 0x7FFFFFFF (max -0x7FFFFFFF $enta@(+ $i 1)))]
 		]
 	]
 
@@ -707,10 +707,9 @@ newgui entfind [
 	guistayopen [
 		guibutton "Copy Attributes from currently selected entity" [
 			loop i 5 [
-				[enta@(+ $i 1)] = (ea $i)
+				[enta@(+ $i 1)] = (ea (+ $i 1))
 			]
-			loop i (listlen $enttypelist)
-			[
+			loop i (listlen $enttypelist) [
 				if (strcmp (et) (at $enttypelist $i)) [
 					entt = $i
 				]
