--- a/data/maps/forge.cfg
+++ b/data/maps/forge.cfg
@@ -25,7 +25,6 @@
 // cloudscrollx 0.01
 // cloudscrolly 0.0
 // cloudsubdiv 16
-// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -59,6 +58,7 @@
 // maptitle "Forge"
 // mmshadows 2
 // mmskylight 1
+// movecrawl 0.5
 // movespeed 50.0
 // numplayers 8
 // obitdeath ""
@@ -91,11 +91,6 @@
 // yawcloudlayer 0
 // yawclouds 0
 // yawsky 331
-
-"forge_intro" = [
-	announce (registersound "sfx/change" 255 "air" -1 -1 1) 3 "^foMISSION: ^fwcollect the ^faneutral ^fwflag in the center and take it to your base on the opposite side."
-]
-"on_start" = [ if (= (gamemode) 6) [ sleep $titlefade [ forge_intro ] ] ]
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
