more cleaning, new map 'darkness' by favorito, first round of map resaves
Former-commit-id: 99c74a85271781d0e09bdf29cabcdf3c7bb6a80f

--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -25,7 +25,6 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -35,10 +34,11 @@
 // fogcolour 0xCCCCCC
 // grassanimmillis 3000
 // grassanimscale 0.03
+// grassblend 1.0
 // grassheight 4
 // grassscale 2
-gravity 60.0
-// impulsespeed 30.0
+// gravity 60.0
+// impulsespeed 50.0
 // jumpspeed 50.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
@@ -58,6 +58,7 @@ gravity 60.0
 // maptitle "Bath"
 // mmshadows 2
 // mmskylight 1
+// movecrawl 0.5
 // movespeed 50.0
 // numplayers 6
 // obitdeath ""
@@ -1480,7 +1481,7 @@ mmodel "acord/sink"
 mmodel "acord/trash"
 mmodel "acord/light1"
 mmodel "acord/tower"
-mmodel ""
+mmodel "acord/acbush0"
 mmodel "acord/crater1"
 mmodel "acord/crater2"
 mmodel "acord/pile1"
