--- a/data/maps/chaos.cfg
+++ b/data/maps/chaos.cfg
@@ -25,20 +25,20 @@
 // cloudscrollx 0.01
 // cloudscrolly 0.005
 // cloudsubdiv 16
-// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
 // floorcurb 5.0
 // floorz 0.867
-// fog 3000
+// fog 4500
 // fogcolour 0x000009
 // grassanimmillis 3000
 // grassanimscale 0.03
+// grassblend 1.0
 // grassheight 4
 // grassscale 2
-gravity 45.0
-// impulsespeed 30.0
+// gravity 45.0
+// impulsespeed 50.0
 // jumpspeed 50.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
@@ -58,6 +58,7 @@ gravity 45.0
 // maptitle "Chaos"
 // mmshadows 2
 // mmskylight 1
+// movecrawl 0.5
 // movespeed 50.0
 // numplayers 12
 // obitdeath ""
@@ -69,7 +70,7 @@ gravity 45.0
 // skybgglare 0
 // skyblend 1.0
 // skybox "acord/sky2"
-// skycolour 0xFFFFFF
+// skycolour 0x444444
 // skyglare 1
 // skylight 0x999999
 // skytexture 1
@@ -81,7 +82,7 @@ gravity 45.0
 // stepspeed 1.0
 // vertwater 1
 // wallz 0.2
-// watercolour 0x103060
+// watercolour 0x201830
 // waterfallcolour 0x000000
 // waterfog 150
 // waterlod 1
@@ -2982,7 +2983,7 @@ mmodel "acord/sink"
 mmodel "acord/trash"
 mmodel "acord/light1"
 mmodel "acord/tower"
-mmodel ""
+mmodel "acord/acbush0"
 mmodel "acord/crater1"
 mmodel "acord/crater2"
 mmodel "acord/pile1"
