--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -25,7 +25,6 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -59,6 +58,7 @@
 // maptitle "Delicatessen"
 // mmshadows 1
 // mmskylight 1
+// movecrawl 0.5
 // movespeed 50.0
 // numplayers 10
 // obitdeath ""
@@ -1621,7 +1621,7 @@ mmodel "acord/sink"
 mmodel "acord/trash"
 mmodel "acord/light1"
 mmodel "acord/tower"
-mmodel ""
+mmodel "acord/acbush0"
 mmodel "acord/crater1"
 mmodel "acord/crater2"
 mmodel "acord/pile1"
