--- a/data/maps/testchamber.cfg
+++ b/data/maps/testchamber.cfg
@@ -201,7 +201,7 @@ mmodel "acord/sink"
 mmodel "acord/trash"
 mmodel "acord/light1"
 mmodel "acord/tower"
-mmodel ""
+mmodel "acord/acbush0"
 mmodel "acord/crater1"
 mmodel "acord/crater2"
 mmodel "acord/pile1"
@@ -245,7 +245,7 @@ mmodel "acord/redrock2"
 mmodel "acord/redrock3"
 mmodel "acord/terminal1"
 mmodel "acord/floor1"
-mmodel ""
+mmodel "acord/acbush0"
 mmodel "acord/weed1"
 mmodel "acord/blood2"
 mmodel "acord/blood3"
