--- a/data/maps/longestyard.cfg
+++ b/data/maps/longestyard.cfg
@@ -1152,7 +1152,7 @@ mmodel "acord/sink"
 mmodel "acord/trash"
 mmodel "acord/light1"
 mmodel "acord/tower"
-mmodel ""
+mmodel "acord/acbush0"
 mmodel "acord/crater1"
 mmodel "acord/crater2"
 mmodel "acord/pile1"
@@ -1196,7 +1196,7 @@ mmodel "acord/redrock2"
 mmodel "acord/redrock3"
 mmodel "acord/terminal1"
 mmodel "acord/floor1"
-mmodel ""
+mmodel "acord/acbush0"
 
 mapsound "sounds/ambience/alienwind" 255 "air" -1 -1
 mapsound "sounds/ambience/blowwind" 255 "air" -1 -1
