--- a/data/maps/nova.cfg
+++ b/data/maps/nova.cfg
@@ -1481,7 +1481,7 @@ mmodel "acord/sink"
 mmodel "acord/trash"
 mmodel "acord/light1"
 mmodel "acord/tower"
-mmodel ""
+mmodel "acord/acbush0"
 mmodel "acord/crater1"
 mmodel "acord/crater2"
 mmodel "acord/pile1"
