--- a/data/maps/warground.cfg
+++ b/data/maps/warground.cfg
@@ -287,7 +287,7 @@ mmodel "acord/sink"
 mmodel "acord/trash"
 mmodel "acord/light1"
 mmodel "acord/tower"
-mmodel ""
+mmodel "acord/acbush0"
 mmodel "acord/crater1"
 mmodel "acord/crater2"
 mmodel "acord/pile1"
