updated rest of maps, fixed entity showent-radius/dir issue
Former-commit-id: dfa83fae6022988dc63f5b9ff6f434964841324c

--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -25,7 +25,6 @@
 // cloudscrollx 0.01
 // cloudscrolly 0.01
 // cloudsubdiv 16
-// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -59,8 +58,9 @@
 // maptitle "Refuge"
 // mmshadows 1
 // mmskylight 1
+// movecrawl 0.5
 // movespeed 50.0
-numplayers 6
+// numplayers 6
 // obitdeath ""
 // obitwater ""
 // refractfog 1
