--- a/data/maps/warground.cfg
+++ b/data/maps/warground.cfg
@@ -25,7 +25,6 @@
 // cloudscrollx 0.01
 // cloudscrolly 0.005
 // cloudsubdiv 16
-// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -35,6 +34,7 @@
 // fogcolour 0x8099B3
 // grassanimmillis 3000
 // grassanimscale 0.03
+// grassblend 1.0
 // grassheight 4
 // grassscale 2
 // gravity 50.0
@@ -58,6 +58,7 @@
 // maptitle "Warground"
 // mmshadows 1
 // mmskylight 1
+// movecrawl 0.5
 // movespeed 50.0
 // numplayers 6
 // obitdeath ""
