--- a/data/maps/panic.cfg
+++ b/data/maps/panic.cfg
@@ -25,7 +25,6 @@
 // cloudscrollx 0.01
 // cloudscrolly -0.01
 // cloudsubdiv 16
-// crawlspeed 30.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -35,6 +34,7 @@
 // fogcolour 0x8099B3
 // grassanimmillis 3000
 // grassanimscale 0.03
+// grassblend 1.0
 // grassheight 4
 // grassscale 2
 // gravity 40.0
@@ -58,6 +58,7 @@
 // maptitle "Flak Panic"
 // mmshadows 2
 // mmskylight 1
+// movecrawl 0.5
 // movespeed 50.0
 // numplayers 8
 // obitdeath ""
