--- a/data/maps/testchamber.cfg
+++ b/data/maps/testchamber.cfg
@@ -5,7 +5,7 @@
 // adaptivesample 1
 // aircurb 25.0
 // ambient 0x191919
-// blurlms 2
+// blurlms 0
 // blurskylight 0
 // bumperror 3
 // causticscale 100
@@ -25,7 +25,6 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -35,6 +34,7 @@
 // fogcolour 0x8099B3
 // grassanimmillis 3000
 // grassanimscale 0.03
+// grassblend 1.0
 // grassheight 4
 // grassscale 2
 // gravity 50.0
@@ -58,6 +58,7 @@
 // maptitle "Test Chamber"
 // mmshadows 2
 // mmskylight 1
+// movecrawl 0.5
 // movespeed 50.0
 // numplayers 0
 // obitdeath "corroded in the gas"
