--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -25,7 +25,6 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -50,7 +49,7 @@
 // lightcompress 3
 // lighterror 5
 // lightlod 0
-// lightprecision 45
+// lightprecision 72
 // liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
@@ -59,6 +58,7 @@
 // maptitle "Venus"
 // mmshadows 2
 // mmskylight 1
+// movecrawl 0.5
 // movespeed 50.0
 // numplayers 6
 // obitdeath ""
