--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -277,9 +277,14 @@ editbind P [
 editbindvar B		fullbright
 
 editbind KP1 		[ editmat air ]
-editbind KP2 		[ editmat clip ]
-editbind KP3		[ editmat water ]
+editbind KP2 		[ editmat water ]
+editbind KP3		[ editmat clip ]
 editbind KP4 		[ editmat glass ]
+editbind KP5 		[ editmat noclip ]
+editbind KP6 		[ editmat lava ]
+editbind KP7 		[ editmat death ]
+editbind KP8 		[ editmat aiclip ]
+editbind KP9 		[ editmat ladder ]
 
 enttypelist = [ 
 	light
