--- a/data/engine.cfg
+++ b/data/engine.cfg
@@ -7,7 +7,7 @@ universaldelta = [
   do [delta_@(if $editing [ result edit ] [ result game ])_@modifier (* $modscale @arg1)]
 ]
 
-listcomplete editmat "air water clip glass noclip lava"
+listcomplete editmat "air water clip glass noclip lava death aiclip ladder"
 air = [ editmat air ]
 water = [ editmat water ]
 clip = [ editmat clip ]
@@ -15,6 +15,7 @@ glass = [ editmat glass ]
 noclip = [ editmat noclip ]
 lava = [ editmat lava ]
 death = [ editmat death ]
+aiclip = [ editmat aiclip ]
 ladder = [ editmat ladder ]
 
 //////// Entity Editing ///////////////
@@ -241,10 +242,8 @@ editdel    = [ if (= (enthavesel) 0) [ delcube ] [ delent ] ]
 editflip   = [ if (= (enthavesel) 0) [ flip ] [ entflip ] ]
 
 editrotate = [ 
-  || [ entdirection $arg1 15 ] [ 
-      rotate $arg1
-      entrotate $arg1 
-    ] 
+  rotate $arg1
+  entrotate $arg1 
 ]
 
 editcut    = [  
@@ -274,11 +273,6 @@ alias autosave [
 alias stopautosave [ noautosave = 1 ]
 
 alias togglesound [ if (> $mastervol 0) [ mastervol 0; echo "sound off" ] [ mastervol 255; echo "sound on" ] ]
-
-alias screen [
-	showhud 0
-	sleep 100 [ screenshot; echo "screenshot saved"; showhud 1; ]
-]
 
 changeoutline = [
 	outlinestatus = (mod (+ $arg1 $outlinestatus) (listlen $outlinecolours))
