use no suffix instead of _native suffix for native bins
Former-commit-id: b643d4f86377f3f6957bef6431d786837796eed5

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS= -O3 -fomit-frame-pointer
 override CXXFLAGS+= -Wall -fsigned-char
 
 PLATFORM= $(shell uname -s)
-PLATFORM_SUFFIX= _native
+PLATFORM_SUFFIX= 
 
 INCLUDES= -Ishared -Iengine -Igame -Ienet/include
 
