--- a/data/models/actors/player/md5.cfg
+++ b/data/models/actors/player/md5.cfg
@@ -50,7 +50,8 @@ md5anim "idle" "g_idle.md5anim" 1
 md5anim "dying" "dying.md5anim" 8
 md5anim "dead" "dead.md5anim" 8
 md5anim "pain" "t_pain.md5anim" 25
-md5anim "switch" "g_reload.md5anim" 8
+md5anim "switch" "g_reload.md5anim" 12
+md5anim "pickup" "g_reload.md5anim" 12
 md5anim "melee" "punch_idle.md5anim" 1
 md5anim "melee attack" "punch.md5anim" 50
 md5anim "pistol" "g_idle.md5anim" 1
