--- a/data/models/actors/player/beta/vwep/md5.cfg
+++ b/data/models/actors/player/beta/vwep/md5.cfg
@@ -9,7 +9,8 @@ md5pitch "" 1
 
 md5anim "idle" "../../vwep_p_idle.md5anim" 1
 md5anim "pain" "../../vwep_p_idle.md5anim" 1
-md5anim "switch" "../../vwep_p_switch.md5anim" 30
+md5anim "switch" "../../vwep_p_switch.md5anim" 45
+md5anim "pickup" "../../vwep_p_switch.md5anim" 45
 md5anim "melee" "../../vwep_punch_idle.md5anim" 1
 md5anim "melee attack" "../../vwep_punch.md5anim" 50
 md5anim "pistol" "../../vwep_p_idle.md5anim" 1
