--- a/data/models/actors/player/delta/vwep/md5.cfg
+++ b/data/models/actors/player/delta/vwep/md5.cfg
@@ -9,12 +9,13 @@ md5pitch "" 1
 
 md5anim "idle" "../../vwep_p_idle.md5anim" 1
 md5anim "pain" "../../vwep_p_idle.md5anim" 1
+md5anim "switch" "../../vwep_p_switch.md5anim" 45
+md5anim "pickup" "../../vwep_p_switch.md5anim" 45
 md5anim "melee" "../../vwep_punch_idle.md5anim" 1
 md5anim "melee attack" "../../vwep_punch.md5anim" 50
 md5anim "pistol" "../../vwep_p_idle.md5anim" 1
 md5anim "pistol shoot" "../../vwep_p_shoot.md5anim" 50
 md5anim "pistol reload" "../../vwep_p_reload.md5anim" 20
-md5anim "switch" "../../vwep_p_switch.md5anim" 30
 md5anim "shotgun" "../../vwep_sg_idle.md5anim" 1
 md5anim "shotgun shoot" "../../vwep_sg_shoot.md5anim" 15
 md5anim "shotgun reload" "../../vwep_sg_reload.md5anim" 21
