variables that tested well in last play session, retooled bot balancing technique
Former-commit-id: dab96a6b15e4a7dadcce021fa70b45e84348d6ae

--- a/data/maps/chaos.cfg
+++ b/data/maps/chaos.cfg
@@ -60,7 +60,7 @@
 // mmskylight 1
 // movecrawl 0.5
 // movespeed 50.0
-// numplayers 12
+numplayers 10
 // obitdeath ""
 // obitwater ""
 // refractfog 1
