--- a/data/maps/testchamber.cfg
+++ b/data/maps/testchamber.cfg
@@ -60,7 +60,7 @@
 // mmskylight 1
 // movecrawl 0.5
 // movespeed 50.0
-// numplayers 0
+numplayers 2
 // obitdeath "corroded in the gas"
 // obitwater "sucked on slime"
 // refractfog 1
