--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -60,7 +60,7 @@
 // mmskylight 1
 // movecrawl 0.5
 // movespeed 50.0
-// numplayers 6
+numplayers 4
 // obitdeath ""
 // obitwater ""
 // refractfog 1
