--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -60,7 +60,7 @@
 // mmskylight 1
 // movecrawl 0.5
 // movespeed 50.0
-// numplayers 10
+numplayers 6
 // obitdeath ""
 // obitwater ""
 // refractfog 1
