--- a/data/maps/darkness.cfg
+++ b/data/maps/darkness.cfg
@@ -60,7 +60,7 @@
 // mmskylight 1
 // movecrawl 0.5
 // movespeed 50.0
-// numplayers 0
+numplayers 4
 // obitdeath "fell to their death"
 // obitwater ""
 // refractfog 1
