--- a/data/maps/wishbone.cfg
+++ b/data/maps/wishbone.cfg
@@ -60,7 +60,7 @@
 // mmskylight 1
 // movecrawl 0.5
 // movespeed 40.0
-// numplayers 8
+numplayers 10
 // obitdeath ""
 // obitwater ""
 // refractfog 1
