darkness clipping fix introduced when water level was raised, mapauthor tweaked for quin's maps
Former-commit-id: 259f8aa413df3d84ebf60114099943f1e66b1141

--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -53,7 +53,7 @@
 // liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
-// mapauthor "Quinton Reeves"
+mapauthor "Quinton 'quin' Reeves"
 // mapmusic ""
 // maptitle "Tower"
 // mmshadows 1
