--- a/data/maps/testchamber.cfg
+++ b/data/maps/testchamber.cfg
@@ -53,7 +53,7 @@
 // liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
-// mapauthor "Quinton Reeves"
+mapauthor "Quinton 'quin' Reeves"
 // mapmusic ""
 // maptitle "Test Chamber"
 // mmshadows 2
