gamespeed pseudo-backport
Former-commit-id: e86b72f7eb7427edaa6285cee31391929d3aab07

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -119,7 +119,7 @@ bind Z				[ drop ]
 bind X				[ action 5 ] // sprint
 bind C				[ action 6 ] // crouch
 bind V				[ action 1 ] // alt-attack
-bind G				[ weapon 6 ] // grenades
+bind G				[ weapon 7 ] // grenades
 bind Q				[ action 7 ] // impulse
 bind K				[ kill ]
 
@@ -137,6 +137,7 @@ bind KP_MINUS		[ mastervol (max (- $mastervol 5) 0) ]
 bind KP_PLUS		[ mastervol (min (+ $mastervol 5) 255) ]
 bind KP_DIVIDE		[ togglesound ]
 
+bindvar PAUSE		gamepaused
 bind PAGEDOWN		[ conskip 1 ]
 bind PAGEUP			[ conskip -1000 ]
 
