--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -481,13 +481,13 @@ newgui game [
 				guilist [
 					vardef maprotate			"map rotation"
 					vardef spawnrotate			"spawn rotation"
+					vardef gamespeed			"game speed"
 					vardef forcegravity			"force gravity"
 					vardef forcemovespeed		"force move speed"
 					vardef forcemovecrawl		"force move crawl"
 					vardef forcejumpspeed		"force jump speed"
 					vardef forceimpulsespeed	"force impulse speed"
 					vardef damagescale			"damage scale"
-					vardef speedscale			"speed scale"
 					vardef hitpushscale			"hit push scale"
 					vardef deadpushscale		"dead push scale"
 					vardef wavepusharea			"wave push area"
@@ -513,13 +513,13 @@ newgui game [
 				guilist [
 					varfld maprotate 16
 					varfld spawnrotate 16
+					varfld gamespeed 16
 					varfld forcegravity 16
 					varfld forcemovespeed 16
 					varfld forcemovecrawl 16
 					varfld forcejumpspeed 16
 					varfld forceimpulsespeed 16
 					varfld damagescale 16
-					varfld speedscale 16
 					varfld hitpushscale 16
 					varfld deadpushscale 16
 					varfld wavepusharea 16
