improved mutator masking and randomisation
Former-commit-id: b4fe88252896fab561b64950dd89e390016878dd

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -296,8 +296,8 @@ newgui game [
 	if (strcmp (at $maplist $mapnum) "?") [ mapcur = $mapextra; mapimg = $mapextra ] [ mapcur = (at $maplist $mapnum); mapimg = (at $mappath $mapnum) ]
 	guilist [
 		guilist [
-			guifont "emphasis" [ guitext (gamename $modeselected $mutsselected) ]
-			guilist [ guifont "sub" [ guitext "^faselected on " ]; guifont "emphasis" [ guitext $mapcur ] ]
+			guifont "default" [ guitext (gamename $modeselected $mutsselected) ]
+			guilist [ guifont "sub" [ guitext "^faselected on " ]; guifont "default" [ guitext $mapcur ] ]
 			guistrut 1
 			guilist [
 				guilist [
@@ -312,18 +312,21 @@ newgui game [
 					if (>= $modeselected 3) [
 						guistrut 1
 						guititle "mutators"
-						guibitfield "instagib"					mutsselected 0x0004
+						guibitfield "instagib"				mutsselected 0x0004
 					] [ guistrut 2 ]
 					if (>= $modeselected 4) [
-						guibitfield "multi-sided"				mutsselected 0x0001
-						guibitfield "teamplay"					mutsselected 0x0002
-						guibitfield "arena"						mutsselected 0x0020
+						guibitfield "multi-sided"			mutsselected 0x0001
+						guibitfield "teamplay"				mutsselected 0x0002
+						guibitfield "arena"					mutsselected 0x0020
 						if (= $modeselected 4) [
-							guibitfield "duel"						mutsselected 0x0008
-							guibitfield "survivor"					mutsselected 0x0010
+							guibitfield "duel"				mutsselected 0x0008
+							guibitfield "survivor"			mutsselected 0x0010
 						] [ guistrut 2 ]
 					] [ guistrut 5 ]
-					mutsselected = (mutscheck $modeselected $mutsselected)
+					mutstrying = 0
+					loop q 6 [ if (&& (& $mutsselected (<< 1 $q)) (! (& $mutsbefore (<< 1 $q)))) [ mutstrying = (| $mutstrying (<< 1 $q)) ] ]
+					mutsselected = (mutscheck $modeselected $mutsselected $mutstrying)
+					mutsbefore = $mutsselected
 				]
 				guistrut 2
 				guilist [ guiimage $mapimg [@(format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur)] 8 1 "textures/nothumb" ]
@@ -553,6 +556,7 @@ newgui game [
 ] [
 	if (< (gamemode) 2) [ modeselected = $defaultmode ] [ modeselected = (gamemode) ]
 	if (< (mutators) 0) [ mutsselected = $defaultmuts ] [ mutsselected = (mutscheck $modeselected (mutators)) ]
+	mutsbefore = $mutsselected
 	lastmode = -1
 	lastmuts = -1
 	mapnum = 0
