--- a/data/maps/wishbone.cfg
+++ b/data/maps/wishbone.cfg
@@ -37,7 +37,7 @@
 // grassblend 1.0
 // grassheight 4
 // grassscale 2
-// gravity 65.0
+// gravity 60.0
 // impulsespeed 40.0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -59,8 +59,8 @@
 // mmshadows 0
 // mmskylight 1
 // movecrawl 0.5
-// movespeed 40.0
-numplayers 10
+// movespeed 50.0
+// numplayers 10
 // obitdeath ""
 // obitwater ""
 // refractfog 1
