limit map selection and number of bots in duel, prevent grenades from adding an inverse relativity and travelling incorrectly as a result
Former-commit-id: 1567a985e5ece3155b374a6882345beab68c06e5

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -244,7 +244,7 @@ displayvote = [
 ]
 newgui vote [ displayvote ]
 
-maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps trialmaps trialmaps ]
+maplists = [ duelmaps storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps trialmaps trialmaps ]
 maplistsize = 29 //adjust if desired
 mapindex = 0
 maplist = ""
@@ -258,8 +258,10 @@ newgui game [
 		maplist = ""
 		mappath = ""
 		if (> $modeselected 2) [
-			ms = (* (- $modeselected 3) 2)
-			if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
+			if (& $mutsselected 0x0008) [ ms = 0 ] [
+				ms = (* (- $modeselected 2) 2)
+				if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
+			]
 			do [list = $@(at $maplists $ms)]
 			loop i (listlen $list) [
 				lcurmap = (at $list $i)
