um.. i lost track after the first couple of issues, pause is fixed though
Former-commit-id: 607c7bb9f586b8d5a5fab51a62dc4f4b2b4ea365

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -137,7 +137,7 @@ bind KP_MINUS		[ mastervol (max (- $mastervol 5) 0) ]
 bind KP_PLUS		[ mastervol (min (+ $mastervol 5) 255) ]
 bind KP_DIVIDE		[ togglesound ]
 
-bindvar PAUSE		gamepaused
+bind PAUSE			[ if (= $gamepaused 1) [ gamepaused 0 ] [ gamepaused 1 ] ]
 bind PAGEDOWN		[ conskip 1 ]
 bind PAGEUP			[ conskip -1000 ]
 
