--- a/data/maps/hollow.cfg
+++ b/data/maps/hollow.cfg
@@ -38,7 +38,7 @@
 // grassheight 4
 // grassscale 2
 // gravity 65.0
-// impulsespeed 20.0
+// impulsespeed 40.0
 // jumpspeed 40.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
@@ -59,8 +59,8 @@
 // mmshadows 2
 // mmskylight 1
 // movecrawl 0.5
-// movespeed 45.0
-numplayers 6
+// movespeed 50.0
+// numplayers 6
 // obitdeath ""
 // obitwater ""
 // refractfog 1
