conskip/teamkill fix, relit tower with less shitty values
Former-commit-id: be770686e499d27952c083ec716c1267cee576ae

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -138,8 +138,8 @@ bind KP_PLUS		[ mastervol (min (+ $mastervol 5) 255) ]
 bind KP_DIVIDE		[ togglesound ]
 
 bind PAUSE			[ if (= $gamepaused 1) [ gamepaused 0 ] [ gamepaused 1 ] ]
-bind PAGEDOWN		[ conskip 1 ]
-bind PAGEUP			[ conskip -1000 ]
+bind PAGEDOWN		[ conskip (- 0 $consize) ]
+bind PAGEUP			[ conskip $consize ]
 
 bind INSERT			[ addbot ]
 bind DELETE			[ delbot ]
