--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -5,7 +5,7 @@
 // adaptivesample 1
 // aircurb 25.0
 // ambient 0x0A0A0A
-// blurlms 2
+// blurlms 0
 // blurskylight 2
 // bumperror 3
 // causticscale 100
@@ -49,7 +49,7 @@
 // lightcompress 3
 // lighterror 8
 // lightlod 0
-// lightprecision 206
+// lightprecision 156
 // liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
@@ -205,7 +205,7 @@ texture z "acord/oldmetal1z.jpg"
 setshader bumpspecmapparallaxworld
 texture c "<mad:0.1/0.1/0.1>acord/concrete.jpg" 0 0 0 0.500000 // 17
 texture n "acord/concreten.jpg"
-texture s "acord/concretes.jpg"
+texture s "<mad:0.1/0.1/0.1>acord/concretes.jpg"
 texture z "acord/concretez.jpg"
 
 mmodel "acord/acbush0"
